# xgboost-udf-example

./: Cargo.toml  README.md  convert_xgboost.py  gdbt.model  model.xgb
benches/: mushrooms_prediction.rs  pandas_onehot.py
src/: lib.rs  main.rs
tests/: integration_test.rs
