[package]
name = "xgboost_udf_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "34.0.0"
gbdt = { git = "https://github.com/mesejo/gbdt-rs.git", branch = "feature/improve-feature-detection" }
tokio = { version = "1.35.0", features = ["full"] }
xgboost = "0.1.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures","async_tokio"] }

[[bench]]
name = "mushrooms_prediction"
harness = false
